--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "autoprefixer": "^10.4.19",
+    "dotenv": "^16.4.5",
     "next": "14.2.4",
     "next-intl": "^3.15.3",
+    "nodemailer": "^6.9.14",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1"
